# freally-capture

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  EULA.md  LICENSE  PRIVACY.md  README.md  SECURITY.md  THIRD-PARTY-NOTICES.md  THIRD-PARTY.md  deny.toml  package-lock.json  package.json  rust-toolchain.toml  rustfmt.toml
.github/actions/linux-deps/: action.yml
.github/workflows/: ci.yml  component-downloads.yml  release.yml  screenshot-smoke.yml  window-enum.yml
crates/appaudio/: Cargo.toml
crates/appaudio/src/: lib.rs  windows.rs
crates/audio/: Cargo.toml
crates/audio/src/: capture.rs  claphost.rs  delay.rs  devices.rs  dsp.rs  engine.rs  fft.rs  graph.rs  lib.rs  loudness.rs  ltc.rs  lufs.rs  media_hub.rs  meter.rs  monitor.rs  resample.rs  spectrum.rs  vis.rs  vst.rs
crates/audio/src/filters/: denoise.rs  dynamics.rs  eq.rs  mod.rs  voice.rs
crates/audio/tests/: live_audio.rs
crates/browser-host/: Cargo.toml
crates/browser-host/src/: main.rs
crates/capture/: Cargo.toml
crates/capture/examples/: window_enum_check.rs
crates/capture/src/: cursorfx.rs  lib.rs  signals.rs  tonemap.rs  window_match.rs
crates/capture/src/game/: mod.rs
crates/capture/src/linux/: mod.rs  portal.rs  pw.rs  x11.rs
crates/capture/src/macos/: mod.rs  sck.rs
crates/capture/src/win/: dxgi.rs  keys.rs  mod.rs  pointer.rs  wgc.rs
crates/capture/tests/: live_capture.rs
crates/compositor/: Cargo.toml
crates/compositor/src/: compositor.rs  gpu.rs  lib.rs  native_preview.rs  telestrator.rs  transform.rs
crates/compositor/src/filters/: cube.rs  mod.rs
crates/compositor/src/shaders/: blit.wgsl  filters.wgsl  item.wgsl  overlay.wgsl  reaction.wgsl  stinger.wgsl  telestrator.wgsl  transition.wgsl
crates/encode/: Cargo.toml
crates/encode/src/: benchmark.rs  cef.rs  decode.rs  encoder.rs  export.rs  failover.rs  ffmpeg.rs  flz.rs  freally_video.rs  lib.rs  link.rs  mux.rs  recorder.rs  remux.rs  trim.rs  verify.rs  wav.rs
crates/encode/src/hardware/: mod.rs
crates/ndi/: Cargo.toml
crates/ndi/src/: lib.rs
crates/plugin/: Cargo.toml
crates/plugin/src/: lib.rs
crates/preview/: Cargo.toml
crates/preview/src/: lib.rs  linux_x11.rs  mac_metal.rs  win.rs  win_dcomp.rs
crates/scene/: Cargo.toml
crates/scene/src/: audio.rs  diff.rs  filter.rs  history.rs  lib.rs  obs_import.rs  scene.rs  source.rs
crates/script/: Cargo.toml
crates/script/src/: lib.rs
crates/sources/: Cargo.toml
crates/sources/examples/: screenshot_check.rs
crates/sources/fonts/: README.md
crates/sources/src/: blackbar.rs  browser.rs  camera_controls.rs  color.rs  compose.rs  countdown.rs  deinterlace.rs  image.rs  inputoverlay.rs  laningest.rs  lib.rs  link.rs  media.rs  playlist.rs  registry.rs  replaysrc.rs  slideshow.rs  socialbar.rs  splits.rs  static_source.rs  testsignal.rs  text.rs  textfile.rs  title.rs  video_device.rs  visualizer.rs
crates/sources/src/chat/: innertube.rs  kick.rs  mod.rs  render.rs  twitch.rs
crates/sources/tests/: live_webcam.rs
crates/stream/: Cargo.toml
crates/stream/src/: lib.rs  multistream.rs  rehearsal.rs  remote.rs  replay.rs  rtmp.rs  session.rs  shaper.rs  vcam.rs
design/: browser-host-protocol.md  browser-source-spike.md  plugin-sdk.md  remote-guests-p2p.md  updater-signing.md
docs/: changelog.html  documentation.html  index.html  join.html  styles.css
plugins/checkerboard/: Cargo.toml
plugins/checkerboard/src/: lib.rs
scripts/: ci-local.mjs  live-capture-tests.ps1  sample.lua
src-tauri/: Cargo.toml  Info.plist  nsis-hooks.nsh  tauri.conf.json
src-tauri/assets/: panel.html
src-tauri/capabilities/: aux-window-close.json  default.json  multiview.json  teleprompter-projector.json
src-tauri/icons/: icon.icns
src-tauri/src/: alarms.rs  audio.rs  audiorec.rs  autoconfig.rs  automation.rs  backup.rs  benchmark.rs  bezier_mask.rs  bugreport.rs  buildinfo.rs  calibration.rs  chords.rs  diagnostics.rs  dockpreset.rs  docks.rs  eula.rs  events.rs  filename.rs  forensic.rs  hotkey_audit.rs  hotkeys.rs  link.rs  main.rs  merge.rs  midi.rs  native_preview.rs  openfile.rs  osc.rs  pack.rs  paths.rs  pipeline.rs  preview.rs  profiles.rs  projector.rs  ptz.rs  quickactions.rs  reactions.rs  recording.rs  remote.rs  remote_api.rs  (+18 more)
src-tauri/src/commands/: audio.rs  calibration.rs  cef.rs  chat.rs  mod.rs  recording.rs  studio.rs
src-tauri/windows/: desktop-shortcut.wxs
ui/: .prettierignore  index.html  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
ui/e2e/: chrome-drive.spec.ts  gallery.spec.ts  tauri-mock.js
ui/scripts/: i18n-lint.mjs  theme-lint.mjs
ui/src/: App.tsx  main.tsx
ui/src/__tests__/: align.test.ts  av-sync.test.tsx  bridge.test.tsx  caesura-editor.test.ts  capture.test.tsx  command-palette.test.tsx  constrain.test.ts  ducking-matrix.test.ts  edit-transform.test.ts  eq-response.test.ts  filter-response.test.ts  focus-trap.test.tsx  guides.test.ts  i18n.test.ts  invite.test.ts  mixer.test.tsx  mute.test.ts  picker-shell.test.tsx  positions.test.ts  qos.test.ts  remote-devices.test.ts  settings-dialog.test.tsx  settings-search.test.ts  source-health.test.tsx  status-announcer.test.tsx  studio-shell.test.tsx  studio.test.tsx  suggest.test.ts  theme.test.ts  transform.test.ts  use-dismiss.test.tsx
ui/src/api/: commands.ts  events.ts  types.ts
ui/src/components/: AudioFiltersDialog.tsx  BrowserFields.tsx  CaesuraEditor.tsx  ChannelStrip.tsx  ClockSelect.tsx  CommandPalette.tsx  DuckingMatrixDialog.tsx  EditTransformDialog.tsx  FeaturedChatDialog.tsx  FilterViz.tsx  FiltersDialog.tsx  LanIngestFields.tsx  LiveButton.tsx  MenuBar.tsx  NumberField.tsx  Panel.tsx  ParametricEqEditor.tsx  PickerShell.tsx  PluginsDialog.tsx  PropertiesDialog.tsx  QrSvg.tsx  RecDot.tsx  ReplayControls.tsx  RoutingMatrixDialog.tsx  SocialBarFields.tsx  SoundboardDialog.tsx  StatusAnnouncer.tsx  TeleprompterIcons.tsx  TimelineDialog.tsx  TrimDialog.tsx  WorkbenchDialog.tsx
ui/src/dict/: ar.json  de.json  en.json  es.json  fr.json  hi.json  id.json  it.json  ja.json  ko.json  nl.json  pl.json  pt-BR.json  ru.json  (+4 more)
(+120 files in other folders)
