# Freally Capture — Cargo workspace
#
# A local-first, cross-platform live-streaming & recording studio (OBS-class).
# The `src-tauri` app crate hosts the Tauri v2 shell + the React/TypeScript control UI;
# the owned engine lives in the library crates under `crates/`.
#
# © 2026 Mike Weaver (Havoc Software) — All Rights Reserved. Proprietary, source-available.

# Package-name scheme: the app crate is `freally-capture`; the owned library
# crates use the `fcap-` prefix (fcap-capture, fcap-compositor, …) so package
# names never collide with crates.io packages or the app crate itself. The
# directory names below stay unprefixed, matching the roadmap.

[workspace]
resolver = "2"
members = [
    "src-tauri",        # `freally-capture` — Tauri v2 app crate (UI bridge, profiles, hotkeys, i18n)
    "crates/capture",   # per-OS screen/window/(game) capture behind a `Capture` interface
    "crates/sources",   # source model: webcam/capture-card, browser, media, image, text, color, audio
    "crates/compositor", # OWNED wgpu GPU compositor: transforms, blend modes, filter chain, scene transitions
    "crates/scene",     # OWNED scene/source/filter data model (+ serde, scripting hooks)
    "crates/audio",     # cpal audio graph: mixing, up-to-6 tracks, filters, ducking, LUFS, monitoring
    "crates/encode",    # hardware encoders + x264 fallback + owned freally-video + the ffmpeg wire-codec bridge (iface)
    "crates/stream",    # RTMP/RTMPS/SRT/WHIP muxers, multistream, reconnect, virtual camera, replay buffer, WS remote API
]

[workspace.package]
version = "0.40.0"
edition = "2021"
rust-version = "1.80"
authors = ["Mike Weaver <mythodikalone@gmail.com>"]
license = "LicenseRef-Proprietary"   # see LICENSE — proprietary, source-available, All Rights Reserved
repository = "https://github.com/MikesRuthless12/freally-capture"
publish = false

# Shared dependency versions for the workspace. Crates opt in with
# `dep = { workspace = true }`. (Structure-only scaffold; pin exact versions when building.)
[workspace.dependencies]
# Core / async
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
parking_lot = "0.12"

# Tauri shell (app crate)
tauri = { version = "2", features = [] }
tauri-build = "2"

# GPU compositor
wgpu = "0.20"
bytemuck = { version = "1", features = ["derive"] }
glam = "0.28"
pollster = "0.3"        # block_on for wgpu's async adapter/device/readback

# Capture (per-OS)
windows = "0.58"        # Windows: DXGI + Windows.Graphics.Capture
# macOS: ScreenCaptureKit via the objc2 0.6 / frameworks 0.3 generation (the
# 0.5/0.2 line predates the CoreMedia coverage SCK's sample buffers need).
objc2 = "0.6"
objc2-foundation = "0.3"
objc2-core-foundation = "0.3"
objc2-core-graphics = "0.3"
objc2-core-media = "0.3"
objc2-core-video = "0.3"
objc2-screen-capture-kit = "0.3"
block2 = "0.6"
dispatch2 = "0.3"
ashpd = { version = "0.13", features = ["screencast"] } # Linux: ScreenCast portal (tokio by default)
pipewire = "0.10"       # Linux: consume the portal's PipeWire video stream
x11rb = "0.13"          # Linux: the X11 capture path
nokhwa = "0.10"         # webcam / capture card
jpeg-encoder = "0.7"    # preview-frame JPEG for the UI pipe (P1.3)

# Audio (denoise is classic DSP — no ML models anywhere, per charter)
cpal = "0.15"

# Static sources: image decode (Image source + LUT/mask files), text
# shaping/rasterization (reuse Freally Snipper font concepts)
image = "0.25"
rustybuzz = "0.18"     # shaping (incl. Arabic joining); ttf-parser re-export for outlines
tiny-skia = "0.11"     # anti-aliased path rasterization for glyphs
fontdb = "0.18"        # system font discovery (no fonts bundled yet)
unicode-bidi = "0.3"   # RTL paragraph handling (UAX #9)

# Streaming / remote API
tungstenite = "0.23"

# Config / hotkeys / i18n
directories = "5"
global-hotkey = "0.6"
fluent = "0.16"

# Wire codecs (NOT bundled — fetched on demand, hash-verified, behind the encode interface)
# ffmpeg-sidecar = "1"    # or ffmpeg-next, decided in P4.4

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
