# Freally Capture — Cargo workspace
#
# A local-first, cross-platform live-streaming & recording studio (OBS-class).
# The `src-tauri` app crate hosts the Tauri v2 shell + the React/TypeScript control UI;
# the owned engine lives in the library crates under `crates/`.
#
# © 2026 Mike Weaver (Havoc Software) — All Rights Reserved. Proprietary, source-available.

# Package-name scheme: the app crate is `freally-capture`; the owned library
# crates use the `fcap-` prefix (fcap-capture, fcap-compositor, …) so package
# names never collide with crates.io packages or the app crate itself. The
# directory names below stay unprefixed, matching the roadmap.

[workspace]
resolver = "2"
members = [
    "src-tauri",        # `freally-capture` — Tauri v2 app crate (UI bridge, profiles, hotkeys, i18n)
    "crates/capture",   # per-OS screen/window/(game) capture behind a `Capture` interface
    "crates/sources",   # source model: webcam/capture-card, browser, media, image, text, color, audio
    "crates/compositor", # OWNED wgpu GPU compositor: transforms, blend modes, filter chain, scene transitions
    "crates/scene",     # OWNED scene/source/filter data model (+ serde, scripting hooks)
    "crates/audio",     # cpal audio graph: mixing, up-to-6 tracks, filters, ducking, LUFS, monitoring
    "crates/appaudio",  # per-application audio capture (isolated WASAPI process-loopback unsafe; honest per-OS)
    "crates/ndi",       # optional NDI output/input: runtime detection + typed interface (never bundled)
    "crates/encode",    # hardware encoders + x264 fallback + owned freally-video + the ffmpeg wire-codec bridge (iface)
    "crates/stream",    # RTMP/RTMPS/SRT/WHIP muxers, multistream, reconnect, virtual camera, replay buffer, WS remote API
    "crates/preview",   # native preview child window (the "OBS feel" GPU surface host; Win/mac/Linux-X11, JPEG fallback)
    "crates/script",    # sandboxed Lua scripting: react to studio events, drive the command surface
    "crates/plugin",    # the plugin SDK: documented Source/Filter contracts + the registry seam
    "plugins/checkerboard", # the sample plugin: adds a source + a filter without touching core
]

[workspace.package]
version = "0.400.0"
edition = "2021"
rust-version = "1.80"
authors = ["Mike Weaver <mythodikalone@gmail.com>"]
license = "LicenseRef-Proprietary"   # see LICENSE — proprietary, source-available, All Rights Reserved
repository = "https://github.com/MikesRuthless12/freally-capture"
publish = false

# Shared dependency versions for the workspace. Crates opt in with
# `dep = { workspace = true }`. (Structure-only scaffold; pin exact versions when building.)
[workspace.dependencies]
# Core / async
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros"] }
tracing = "0.1"
env_logger = "0.11"     # surfaces wgpu's `log` diagnostics when RUST_LOG is set (silent otherwise)
uuid = { version = "1", features = ["v4", "serde"] }
mlua = { version = "0.10", features = ["lua54", "vendored", "serialize"] }  # sandboxed scripting (Lua 5.4, no system dep, JSON bridging)
parking_lot = "0.12"

# Tauri shell (app crate)
tauri = { version = "2", features = [] }
tauri-build = "2"

# GPU compositor — wgpu 27 for the native DirectComposition surface
# (`SurfaceTargetUnsafe::CompositionVisual`) that the "OBS feel" preview needs;
# migrated up from 0.20 (NP.1). raw-window-handle 0.6 still matches.
wgpu = "27"
bytemuck = { version = "1", features = ["derive"] }
glam = "0.28"
pollster = "0.3"        # block_on for wgpu's async adapter/device/readback
raw-window-handle = "0.6"   # native-preview surface target (matches wgpu 27)

# Capture (per-OS)
windows = "0.58"        # Windows: DXGI + Windows.Graphics.Capture
# macOS: ScreenCaptureKit via the objc2 0.6 / frameworks 0.3 generation (the
# 0.5/0.2 line predates the CoreMedia coverage SCK's sample buffers need).
objc2 = "0.6"
objc2-foundation = "0.3"
objc2-core-foundation = "0.3"
objc2-core-graphics = "0.3"
objc2-core-media = "0.3"
objc2-core-video = "0.3"
objc2-screen-capture-kit = "0.3"
block2 = "0.6"
dispatch2 = "0.3"
ashpd = { version = "0.13", features = ["screencast"] } # Linux: ScreenCast portal (tokio by default)
pipewire = "0.10"       # Linux: consume the portal's PipeWire video stream
x11rb = "0.13"          # Linux: the X11 capture path
libloading = "0.8"      # runtime-probe optional native runtimes (NDI) without bundling
x11-dl = "2"            # Linux: the native-preview X11 child window (fcap-preview)
nokhwa = "0.10"         # webcam / capture card
jpeg-encoder = "0.7"    # preview-frame JPEG for the UI pipe (P1.3)

# Audio (denoise is classic DSP — no ML models anywhere, per charter)
cpal = "0.15"

# Static sources: image decode (Image source + LUT/mask files), text
# shaping/rasterization (reuse Freally Snipper font concepts)
image = "0.25"
# MIDI control surfaces (CAP-N03). MIT — permissive, recorded in
# THIRD-PARTY-NOTICES.
midir = "0.11"
# Gamepad state for the input overlay source (CAP-N13). Apache-2.0/MIT —
# verified on crates.io, recorded in THIRD-PARTY-NOTICES. Polled only while
# an overlay source is live; never logged. (Linux builds need libudev-dev.)
gilrs = "0.11"
rustybuzz = "0.18"     # shaping (incl. Arabic joining); ttf-parser re-export for outlines
tiny-skia = "0.11"     # anti-aliased path rasterization for glyphs
fontdb = "0.18"        # system font discovery (no fonts bundled yet)
unicode-bidi = "0.3"   # RTL paragraph handling (UAX #9)

# Streaming / remote API
tungstenite = "0.23"

# Config / hotkeys / i18n
chrono = "0.4"          # local-time recording filenames
directories = "5"
global-hotkey = "0.6"
tauri-plugin-global-shortcut = "2"   # PTT/PTM (P3); the full hotkey map lands in P5
fluent = "0.16"

# Wire-codec bridge (P4.4): fetch + hash-verify + extract the PINNED ffmpeg
# build on demand (never bundled), then drive it as a separate process.
ureq = "2"                # HTTPS download (rustls + webpki roots, no system deps)
sha2 = "0.10"             # SHA-256 verification of the fetched archive
sha1 = "0.10"             # SHA-1 verification of the CEF archive (the CDN publishes sha1)
zip = { version = "2", default-features = false, features = ["deflate"] } # gyan/riedl archives
tar = "0.4"               # BtbN Linux archive (with lzma-rs for the xz layer) + CEF tar.bz2
lzma-rs = "0.3"           # pure-Rust xz decode (Linux archive only)
bzip2 = "0.4"             # bzip2 decode (CEF .tar.bz2, multi-stream); libbz2 C is vendored + compiled (no system lib)

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
