# freally-capture — the Tauri v2 app crate (shell, UI bridge, settings, profiles, license, hotkeys, i18n).
[package]
name = "freally-capture"
description = "Freally Capture — a local-first, cross-platform live-streaming & recording studio (Tauri v2 shell)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
tauri = { workspace = true }
tauri-plugin-global-shortcut = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
chrono = { workspace = true }
directories = { workspace = true }
image = { workspace = true } # lossless PNG for still-frame grab (CAP-M08)
jpeg-encoder = { workspace = true }
# Prints wgpu's `log` diagnostics (adapter enumeration, surface errors) when
# RUST_LOG is set; silent by default, so no effect on normal runs.
env_logger = { workspace = true }

# The owned engine crates — linked from day one so `health` proves the wiring.
# (fcap-capture + fcap-sources are live as of Phase 1: capture + preview.)
fcap-capture = { path = "../crates/capture" }
fcap-sources = { path = "../crates/sources" }
fcap-compositor = { path = "../crates/compositor" }
fcap-scene = { path = "../crates/scene" }
fcap-audio = { path = "../crates/audio" }
fcap-appaudio = { path = "../crates/appaudio" }
fcap-ndi = { path = "../crates/ndi" }
fcap-encode = { path = "../crates/encode" }
fcap-stream = { path = "../crates/stream" }
fcap-script = { path = "../crates/script" }
fcap-preview = { path = "../crates/preview" }
tauri-plugin-deep-link = "2"
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
sysinfo = { version = "0.33", default-features = false, features = ["system"] }
# The post-crash "stopped unexpectedly" message box, shown by the `--crash-notice`
# helper process *after* the studio has died — so it cannot use Tauri's dialog
# plugin (there is no app left to host it). Already in the tree via
# tauri-plugin-dialog; naming it here only makes the direct use explicit.
#
# `gtk3` only, and never the default features. `tauri-plugin-dialog` selects
# `rfd/gtk3`, and cargo unions features across the graph — so taking rfd's
# defaults (`xdg-portal`, `wayland`, `async-std`) makes its build script abort
# with "You can't enable both `gtk3` and `xdg-portal` features at once" on Linux,
# and drags in a parallel ashpd/wayland stack whose `quick-xml 0.39` carries an
# unpatched advisory. Matching the plugin's choice adds zero new dependencies.
rfd = { version = "0.16", default-features = false, features = ["gtk3"] }

# Linux only: read the Tauri window's X11 id (RawWindowHandle::Xlib) to parent
# the native-preview child window. Matches Tauri's raw-window-handle 0.6.
[target.'cfg(target_os = "linux")'.dependencies]
raw-window-handle = { workspace = true }
