[package]
name = "freally-browser-host"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
description = "CAP-N77 browser host: renders an http(s) URL offscreen via the on-demand CEF runtime and streams RGBA frames over stdout (design/browser-host-protocol.md)."

[[bin]]
name = "freally-browser-host"
path = "src/main.rs"

[features]
# The real CEF OSR backend — enabled ONLY by the CI component build, which
# links against the pinned CEF SDK per-OS. Without it the host exits 3 with
# an honest message, so workspace builds never need the SDK.
cef = []

[dependencies]
# Deliberately none: args are parsed by hand, the protocol is raw bytes.
