# fcap-capture — per-OS screen/window/(game) capture behind the `Capture` interface.
[package]
name = "fcap-capture"
description = "Freally Capture — per-OS screen/window/(game) capture behind a single `Capture` interface."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
thiserror = { workspace = true }
tracing = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { workspace = true, features = [
    "Foundation",
    "Graphics",
    "Graphics_Capture",
    "Graphics_DirectX",
    "Graphics_DirectX_Direct3D11",
    "Win32_Foundation",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Gdi",
    "Win32_System_SystemInformation",
    "Win32_System_Threading",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_WinRT",
    "Win32_System_WinRT_Direct3D11",
    "Win32_System_WinRT_Graphics_Capture",
    "Win32_UI_WindowsAndMessaging",
] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = { workspace = true }
objc2-foundation = { workspace = true }
objc2-core-foundation = { workspace = true }
objc2-core-graphics = { workspace = true }
objc2-core-media = { workspace = true }
objc2-core-video = { workspace = true }
objc2-screen-capture-kit = { workspace = true }
block2 = { workspace = true }
dispatch2 = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
ashpd = { workspace = true }
pipewire = { workspace = true }
x11rb = { workspace = true }
tokio = { workspace = true }
