# fcap-scene — the OWNED scene/source/filter data model.
[package]
name = "fcap-scene"
description = "Freally Capture — the owned scene/source/filter data model (serde-serialized, shared across scenes, scripting hooks)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
