# fcap-sources — the source implementations composed onto the canvas.
[package]
name = "fcap-sources"
description = "Freally Capture — source implementations: webcam/capture card, image, text, color, media, browser."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
fcap-capture = { path = "../capture" }
thiserror = { workspace = true }
tracing = { workspace = true }
# Webcams + capture cards; `input-native` = MSMF (Windows), AVFoundation
# (macOS), V4L2 (Linux). The default `decoding` feature handles MJPEG/YUYV.
nokhwa = { workspace = true, features = ["input-native"] }
# Static sources (P2.4): image decode + text shaping/rasterization.
image = { workspace = true }
rustybuzz = { workspace = true }
tiny-skia = { workspace = true }
fontdb = { workspace = true }
unicode-bidi = { workspace = true }
