# fcap-sources — the source implementations composed onto the canvas.
[package]
name = "fcap-sources"
description = "Freally Capture — source implementations: webcam/capture card, image, text, color, media, browser."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
fcap-capture = { path = "../capture" }
# The Media source (P4.9): decoded audio lands in the mixer's media hub;
# .frec plays through the owned codec; the wire formats decode through the
# labeled on-demand ffmpeg component.
fcap-audio = { path = "../audio" }
fcap-encode = { path = "../encode" }
thiserror = { workspace = true }
tracing = { workspace = true }
# Webcams + capture cards; `input-native` = MSMF (Windows), AVFoundation
# (macOS), V4L2 (Linux). The default `decoding` feature handles MJPEG/YUYV.
nokhwa = { workspace = true, features = ["input-native"] }
# Static sources (P2.4): image decode + text shaping/rasterization.
image = { workspace = true }
rustybuzz = { workspace = true }
tiny-skia = { workspace = true }
fontdb = { workspace = true }
unicode-bidi = { workspace = true }
# The chat overlay (P6.12): the owned no-key InnerTube/Kick clients poll
# over HTTPS (rustls, same stack as the ffmpeg fetch); Twitch reads
# anonymous plaintext IRC over std TcpStream. Timestamps are local time.
ureq = { workspace = true, features = ["json"] }
serde_json = { workspace = true }
chrono = { workspace = true }
